--- a/docs/[見ないでください]私の秘密メモ.md
+++ b/docs/[見ないでください]私の秘密メモ.md
@@ -143,7 +143,10 @@ ExecPlan 側：
 - システム全体のアーキテクチャまで細かいドキュメントは不要だったため、オンボーディングの修正
   - 「システムレベルは exec-plan + design/index.md に絞る」
   - 「「細かい設計・plan・research などはサービス単位の feature に全部寄せる」
-
+- 以下、タスク周りの調整
+  - tasks.md
+  - tasks-template.md
+- analyze.md
 
 
 ---
@@ -239,8 +242,8 @@ ExecPlan → design/index.md → 各 feature の impl-plan → tasks.md
 2. clarify
 3. checklist
 4. plan         
-5. tasks        ← ここまで終わった
-6. analyze      成果物間の整合性チェック（推奨オプション）  ← 次はここを作業する
+5. tasks
+6. analyze      ← ここまで終わった
 7. implement
 8. review
 
