--- a/docs/[見ないでください]私の秘密メモ.md
+++ b/docs/[見ないでください]私の秘密メモ.md
@@ -209,6 +209,9 @@ services/, tests/, scripts/
 
 ExecPlan → design/index.md → 各 feature の impl-plan → tasks.md
 
+- /speckit.plan … フィーチャごとの impl-plan と設計 artifacts を作る
+- /speckit.tasks … その impl-plan ＋設計 artifacts から「実行タスク」を起こす
+
 ## 品質ゲート
 
 - Spec Kit は「specify → clarify → (仕様品質ゲート: scripts/validate_spec.sh) → Plan → (Plan品質ゲート: scripts/validate_plan.sh) → Tasks  → (Task品質ゲート) → Implement → (実装ゲート: コード&セキュリティレビュー)」のゲート制で回すので、1つのプロンプトに詰め込みすぎないこと
@@ -223,9 +226,11 @@ ExecPlan → design/index.md → 各 feature の impl-plan → tasks.md
 - Plan品質ゲートのステップ
   - AIエージェントのレビューで 各フィーチャの `checklists/PlanQualityGate.md` を埋める。/plan コマンド実行で自動的に PlanQualityGate.md が作成される。
 
-/speckit.plan … フィーチャごとの impl-plan と設計 artifacts を作る
-/speckit.tasks … その impl-plan ＋設計 artifacts から「実行タスク」を起こす
+## 実装
 
+- Jules で Issue ドリブンにするつもりで、自律的に情報収集してくれるはずだけど、GitHub Copilot の場合は以下のような指摘もある。
+  - ただし、エージェントが適切に動作するためには、Issue に必要な情報が揃っていることが大前提です。Issue Template を整備して、背景・要件・受け入れ条件などを漏れなく記載する習慣をつけましょう。agents.md でどれだけ良い指示を書いても、Issue の情報が不足していては効果が薄れてしまいます。
+- 精度が出ない場合は Issue にもしっかり情報を書いた方が良いかも
 
 ## ワークフロー
 ====== 全体の確認 ===============
