--- a/docs/[見ないでください]私の秘密メモ.md
+++ b/docs/[見ないでください]私の秘密メモ.md
@@ -1,3 +1,8 @@
+# ブランチ
+
+- ブランチ：Skills
+  - Spec に Skill 要素を追加
+
 # to do
 - スクリプト周り(scripts/)をダウンロードして、このプロジェクト用に調整。特にPATHは変更する必要あるかも。
   - common.sh
