--- a/docs/[見ないでください]私の秘密メモ.md
+++ b/docs/[見ないでください]私の秘密メモ.md
@@ -14,7 +14,7 @@
   - 【done】spec-template.md
   - tasks-template.md
 - Speckit の 残りのプロンプトの調整。 clarify は以下のようにしたい。
-    推奨度と理由をつけて選択肢を提示します。（推奨度：⭐の5段階評価）。質問は最大3つまでとする。選択肢を提示するときは、常に考えられる選択肢を5～7個リストアップし、有力な2～4個に絞り込みます。
+    推奨度と理由をつけて選択肢を提示します。（推奨度：⭐の5段階評価）。質問は最大3つまでとする。選択肢を提示するときは、常に考えられる選択肢を5～7個リストアップし、有力なgit checkout -b Skills2～4個に絞り込みます。
       - clarify の修正できたけど、このあとのPLANとかでPATHが変更になったら再度調整する部分が出てくるので注意。(IMPL_PLAN / TASKS / plan.md / tasks.md まわりは、今のところ既存ロジックをそのまま維持した。後から調整するかも)
       - なので、全体が調整できたあとに、再度スクリプト内のPATHを見直す
   - Plan周り(品質ゲート含む)はdone
