--- a/docs/[見ないでください]私の秘密メモ.md
+++ b/docs/[見ないでください]私の秘密メモ.md
@@ -12,7 +12,7 @@
 - 以下もPATHなどの調整が必要かも
   - 【done】plan-template.md
   - 【done】spec-template.md
-  - tasks-template.md
+  - 【done】tasks-template.md
 - Speckit の 残りのプロンプトの調整。 clarify は以下のようにしたい。
     推奨度と理由をつけて選択肢を提示します。（推奨度：⭐の5段階評価）。質問は最大3つまでとする。選択肢を提示するときは、常に考えられる選択肢を5～7個リストアップし、有力なgit checkout -b Skills2～4個に絞り込みます。
       - clarify の修正できたけど、このあとのPLANとかでPATHが変更になったら再度調整する部分が出てくるので注意。(IMPL_PLAN / TASKS / plan.md / tasks.md まわりは、今のところ既存ロジックをそのまま維持した。後から調整するかも)
@@ -254,7 +254,7 @@ ExecPlan → design/index.md → 各 feature の impl-plan → tasks.md
 4. plan         
 5. tasks
 6. analyze      ← ここまで終わった
-7. implement
+7. implement    ← doing。Issue テンプレート作る
 8. review
 
 ## Onboarding
