--- a/docs/[見ないでください]私の秘密メモ.md
+++ b/docs/[見ないでください]私の秘密メモ.md
@@ -266,7 +266,7 @@ ExecPlan → design/index.md → 各 feature の impl-plan → tasks.md
 4. plan         
 5. tasks
 6. analyze      ← ここまで終わった
-7. implement    ← doing。Issue テンプレート作る
+7. implement    ← doing。Issue テンプレート作る ← Issue テンプレートは作った
 8. review
 
 ## Onboarding
