--- a/docs/[見ないでください]私の秘密メモ.md
+++ b/docs/[見ないでください]私の秘密メモ.md
@@ -5,7 +5,7 @@
 
 # to do
 - スクリプト周り(scripts/)をダウンロードして、このプロジェクト用に調整。特にPATHは変更する必要あるかも。
-  - common.sh
+  - 【done】common.sh
   - create-new-feature.sh
   - 【修正不要だった】setup-plan.sh
   - update-claude-md.sh
