--- a/docs/[見ないでください]私の秘密メモ.md
+++ b/docs/[見ないでください]私の秘密メモ.md
@@ -8,7 +8,7 @@
   - 【done】common.sh
   - create-new-feature.sh
   - 【修正不要だった】setup-plan.sh
-  - update-claude-md.sh
+  - 【不要】update-claude-md.sh
 - 以下もPATHなどの調整が必要かも
   - 【done】plan-template.md
   - 【done】spec-template.md
