--- a/docs/[見ないでください]私の秘密メモ.md
+++ b/docs/[見ないでください]私の秘密メモ.md
@@ -6,7 +6,7 @@
 # to do
 - スクリプト周り(scripts/)をダウンロードして、このプロジェクト用に調整。特にPATHは変更する必要あるかも。
   - 【done】common.sh
-  - create-new-feature.sh
+  - 【done】create-new-feature.sh
   - 【修正不要だった】setup-plan.sh
   - 【不要】update-claude-md.sh
 - 以下もPATHなどの調整が必要かも
@@ -18,7 +18,7 @@
       - clarify の修正できたけど、このあとのPLANとかでPATHが変更になったら再度調整する部分が出てくるので注意。(IMPL_PLAN / TASKS / plan.md / tasks.md まわりは、今のところ既存ロジックをそのまま維持した。後から調整するかも)
       - なので、全体が調整できたあとに、再度スクリプト内のPATHを見直す
   - Plan周り(品質ゲート含む)はdone
-- 指示用プロンプトの調整
+- 【done】指示用プロンプトの調整
   - AGENTS.md, constitution.md も調整。TDD スタイル を維持しながら、このディレクトリ構造に合わせたい。さらに、全体アーキテクチャ → マイクロサービス という構造にしたいので、architecture/ の作成や全体アーキテクチャの ExecPlan の作成、マイクロサービスの Spec や ExecPlan を作るように指示したい。技術スタックはCloudflareやNeon等にしたい。
     - 開発ワークフロー
       - 1.  **アーキテクチャ設計**: ユーザーの要求に基づき、全体アーキテクチャ仕様書を生成します。
@@ -30,9 +30,9 @@
 - 毎回このディレクトリ構造になるように、スクリプトを作ってそれを実行すれば、この構造になるなスクリプトを用意したい。
 - checklist の対応
   - 【done】テンプレートを配置(templates/checklist)
-  - スクリプトを作成。実行するとテンプレートからチェックリストを持ってきて、各マイクロサービスのフォルダに配置させるやつ。
+  - 【done】スクリプトを作成。実行するとテンプレートからチェックリストを持ってきて、各マイクロサービスのフォルダに配置させるやつ。
     - サービスごとの Issue 生成フローを templates/commands などに追加し、誰でも同一テンプレで起票できるよう CLI 化する。
-  - 所定のフォルダに配置されたら、あくまでも汎用的なリストになっているため、エージェントに今回のプロジェクトの仕様にないチェック項目は削除させ、必要なものだけ残させる。
+  - 【done】所定のフォルダに配置されたら、あくまでも汎用的なリストになっているため、エージェントに今回のプロジェクトの仕様にないチェック項目は削除させ、必要なものだけ残させるためのコメントを書く。
   - マイクロサービスの実装が完了するごとにチェックリストを走らせる。その代わり、全体アーキテクチャに対してのチェックは不要。
 
 
