--- a/templates/checklist/マイクロサービス実装チェックリスト.md
+++ b/templates/checklist/マイクロサービス実装チェックリスト.md
@@ -1,3 +1,8 @@
+> **目的**  
+> このチェックリストはテンプレートです。MVP開発フェーズでは、本番向け用途と思われるチェック項目は削除してください。
+
+---
+
 # マイクロサービス実装チェックリスト
 
 開発者が分散システムの品質を確保するために確認すべき項目です。TDDサイクル（Red/Green/Refactor）の各段階で、以下の観点が満たされていることを確認します。
