--- a/docs/[見ないでください]私の秘密メモ.md
+++ b/docs/[見ないでください]私の秘密メモ.md
@@ -33,7 +33,7 @@
   - 【done】スクリプトを作成。実行するとテンプレートからチェックリストを持ってきて、各マイクロサービスのフォルダに配置させるやつ。
     - サービスごとの Issue 生成フローを templates/commands などに追加し、誰でも同一テンプレで起票できるよう CLI 化する。
   - 【done】所定のフォルダに配置されたら、あくまでも汎用的なリストになっているため、エージェントに今回のプロジェクトの仕様にないチェック項目は削除させ、必要なものだけ残させるためのコメントを書く。
-  - マイクロサービスの実装が完了するごとにチェックリストを走らせる。その代わり、全体アーキテクチャに対してのチェックは不要。
+  - 【done】マイクロサービスの実装が完了するごとにチェックリストを走らせる。その代わり、全体アーキテクチャに対してのチェックは不要。
 
 
 
