--- a/docs/[見ないでください]私の秘密メモ.md
+++ b/docs/[見ないでください]私の秘密メモ.md
@@ -2,6 +2,7 @@
 
 - ブランチ：Skills
   - Spec に Skill 要素を追加
+- ブランチ：
 
 # to do
 - スクリプト周り(scripts/)をダウンロードして、このプロジェクト用に調整。特にPATHは変更する必要あるかも。
@@ -164,7 +165,8 @@ ExecPlan 側：
   - tasks.md
   - tasks-template.md
 - analyze.md
-
+- scripts フォルダの中にあるファイルの整合性を一通りチェック
+- templates フォルダの中にあるファイルの整合性を一通りチェック
 
 ---
 
