--- a/docs/[見ないでください]私の秘密メモ.md
+++ b/docs/[見ないでください]私の秘密メモ.md
@@ -2,9 +2,11 @@
 
 - ブランチ：Skills
   - Spec に Skill 要素を追加
-- ブランチ：
+- ブランチ：F-API-001-sandbox
+  - 修正中に勝手に作られちゃった。これが最新。
 
 # to do
+- そろそろ一回メモリームかS&P500効率的フロンティアでテストしてみる。
 - スクリプト周り(scripts/)をダウンロードして、このプロジェクト用に調整。特にPATHは変更する必要あるかも。
   - 【done】common.sh
   - 【done】create-new-feature.sh
@@ -14,13 +16,13 @@
   - 【done】plan-template.md
   - 【done】spec-template.md
   - 【done】tasks-template.md
-- Speckit の 残りのプロンプトの調整。 clarify は以下のようにしたい。
+- 【done】Speckit の 残りのプロンプトの調整。 clarify は以下のようにしたい。
     推奨度と理由をつけて選択肢を提示します。（推奨度：⭐の5段階評価）。質問は最大3つまでとする。選択肢を提示するときは、常に考えられる選択肢を5～7個リストアップし、有力なgit checkout -b Skills2～4個に絞り込みます。
       - clarify の修正できたけど、このあとのPLANとかでPATHが変更になったら再度調整する部分が出てくるので注意。(IMPL_PLAN / TASKS / plan.md / tasks.md まわりは、今のところ既存ロジックをそのまま維持した。後から調整するかも)
       - なので、全体が調整できたあとに、再度スクリプト内のPATHを見直す
   - Plan周り(品質ゲート含む)はdone
 - 【done】指示用プロンプトの調整
-  - AGENTS.md, constitution.md も調整。TDD スタイル を維持しながら、このディレクトリ構造に合わせたい。さらに、全体アーキテクチャ → マイクロサービス という構造にしたいので、architecture/ の作成や全体アーキテクチャの ExecPlan の作成、マイクロサービスの Spec や ExecPlan を作るように指示したい。技術スタックはCloudflareやNeon等にしたい。
+  - 【done】AGENTS.md, constitution.md も調整。TDD スタイル を維持しながら、このディレクトリ構造に合わせたい。さらに、全体アーキテクチャ → マイクロサービス という構造にしたいので、architecture/ の作成や全体アーキテクチャの ExecPlan の作成、マイクロサービスの Spec や ExecPlan を作るように指示したい。技術スタックはCloudflareやNeon等にしたい。
     - 開発ワークフロー
       - 1.  **アーキテクチャ設計**: ユーザーの要求に基づき、全体アーキテクチャ仕様書を生成します。
       - 2.  **詳細設計 & API契約**: 各マイクロサービスフォルダのドキュメントを充実させていく。
