--- a/docs/[見ないでください]私の秘密メモ.md
+++ b/docs/[見ないでください]私の秘密メモ.md
@@ -7,7 +7,8 @@
   - Spec に Skill 要素を追加
 
 # to do
-- そろそろ一回メモリームかS&P500効率的フロンティアでテストしてみる。
+- そろそろ一回メモリームかS&P500効率的フロンティアでテストしてみる。Speckit と同じフローで動かせば良いと思っていたけど、最初にハーネスにFeatureを登録してIDを持たせたうえで--feature-idを付けて実行する必要があるっぽい。つまり、feature_list.json を最初に作る必要があるみたい。
+- いくつかは空の受け皿がある状態になっている
 - スクリプト周り(scripts/)をダウンロードして、このプロジェクト用に調整。特にPATHは変更する必要あるかも。
   - 【done】common.sh
   - 【done】create-new-feature.sh
