--- a/docs/[見ないでください]私の秘密メモ.md
+++ b/docs/[見ないでください]私の秘密メモ.md
@@ -7,7 +7,8 @@
   - Spec に Skill 要素を追加
 
 # to do
-- そろそろ一回メモリームかS&P500効率的フロンティアでテストしてみる。Speckit と同じフローで動かせば良いと思っていたけど、最初にハーネスにFeatureを登録してIDを持たせたうえで--feature-idを付けて実行する必要があるっぽい。つまり、feature_list.json を最初に作る必要があるみたい。なので、feature_list.json を作る工程 `bootstrap-features.md + create-new-feature.sh` を /speckit.specify --feature-id F-XXX-YYY ... の前に入れた。bootstrap-features.md を使うと feature-id が出てくるのでそれを使って、「/speckit.specify --feature-id F-XXX-YYY 仕様説明 」する
+- そろそろ一回メモリームかS&P500効率的フロンティアでテストしてみる。Speckit と同じフローで動かせば良いと思っていたけど、最初にハーネスにFeatureを登録してIDを持たせたうえで--feature-idを付けて実行する必要があるっぽい。つまり、feature_list.json を最初に作る必要があるみたい。なので、feature_list.json を作る工程 `bootstrap-features.md + create-new-feature.sh` を /speckit.specify --feature-id F-XXX-YYY ... の前に入れた。bootstrap-features.md を使うと feature-id が複数出てくるのでそれを使って、「/speckit.specify --feature-id F-XXX-YYY 仕様説明 」する
+  - と思ったけど、このやり方はできないと思ったので specify.md を修正した。結果、従来の Speckit と同様に /speckit.specify "仕様説明"  → (複数の Feature ID と各 spec.md とチェックリスト が生成される) → /speckit.clarify → /speckit.plan で OK
 - いくつかは空の受け皿がある状態になっている
 - スクリプト周り(scripts/)をダウンロードして、このプロジェクト用に調整。特にPATHは変更する必要あるかも。
   - 【done】common.sh
@@ -40,6 +41,46 @@
   - 【done】所定のフォルダに配置されたら、あくまでも汎用的なリストになっているため、エージェントに今回のプロジェクトの仕様にないチェック項目は削除させ、必要なものだけ残させるためのコメントを書く。
   - 【done】マイクロサービスの実装が完了するごとにチェックリストを走らせる。その代わり、全体アーキテクチャに対してのチェックは不要。
 
+
+## /speckit.specify とは？
+↓ これを書くのが無理なので、従来の Speckit 通り /speckit.specify "仕様説明" できるように改良した。つまり、specify.md のプロンプトを修正し、feature_list.json を自動で生成するようにさせた。
+================================
+/speckit.specify --feature-id <ID> "<説明>"
+となり、だいぶ使い方が変わった。
+
+【"<説明>" の書き方ガイド】
+
+「<説明>」には、そのフィーチャの仕様を簡潔にまとめます。  
+**1〜3文＋箇条書き**が目安です。次の観点を入れると有効です：
+
+---
+**主な記載内容**  
+- **目的／ユーザー価値** ：何のための機能か  
+- **アクター・主要フロー** ：誰が何をしてどうなるか  
+- **入力と出力** ：パラメータや画面入力・レスポンス内容など  
+- **正常時の完了条件** ：成功メッセージ、HTTPコード、保存データなど  
+- **重要なエラー条件・バリデーション** ：必須項目、重複、権限チェックなど  
+- **非機能要件** ：性能、可用性、セキュリティ制約など（必要な場合）
+
+---
+
+**フォーマット例（API系）**  
+```
+/speckit.specify --feature-id F-API-002 "GET /ping: returns 200 with body {status:'ok', uptimeSeconds:int, version:string}. No auth. 100ms以内。エラー時は503 {status:'degraded'}。"
+```
+
+**フォーマット例（UI系）**  
+```
+/speckit.specify --feature-id F-USER-003 "Signup form: fields email/password/name. 必須チェックとパスワード強度。成功でThank You画面へ遷移。メール重複はエラー表示。"
+```
+
+---
+
+**ポイント**  
+- 実装方法ではなく「何を達成すべきか」を書く  
+- 重要なエッジケースがあれば1〜2個だけ簡潔に加えると精度UP  
+- 複数フィーチャ生成時は、それぞれの役割に合わせて説明文を調整するとSpecが書きやすくなります
+================================
 
 
 ## speckit.checklist とは？
