--- a/docs/[見ないでください]私の秘密メモ.md
+++ b/docs/[見ないでください]私の秘密メモ.md
@@ -7,7 +7,7 @@
   - Spec に Skill 要素を追加
 
 # to do
-- そろそろ一回メモリームかS&P500効率的フロンティアでテストしてみる。Speckit と同じフローで動かせば良いと思っていたけど、最初にハーネスにFeatureを登録してIDを持たせたうえで--feature-idを付けて実行する必要があるっぽい。つまり、feature_list.json を最初に作る必要があるみたい。なので、feature_list.json を作る工程 `bootstrap-features.md + create-new-feature.sh` を /speckit.specify --feature-id F-XXX-YYY ... の前に入れた。bootstrap-features.md を使うと feature-id が複数出てくるのでそれを使って、「/speckit.specify --feature-id F-XXX-YYY 仕様説明 」する
+- そろそろ一回メモリームかS&P500効率的フロンティアかDeepResearch(動的に計画を修正する版「これで AutoResearch を定量的に評価してみたい。さらに失敗パターンを踏まえたサービス設計も書いた。」)でテストしてみる。LLMは「https://openrouter.ai/deepseek/deepseek-v3.2-speciale」で良さそう。Speckit と同じフローで動かせば良いと思っていたけど、最初にハーネスにFeatureを登録してIDを持たせたうえで--feature-idを付けて実行する必要があるっぽい。つまり、feature_list.json を最初に作る必要があるみたい。なので、feature_list.json を作る工程 `bootstrap-features.md + create-new-feature.sh` を /speckit.specify --feature-id F-XXX-YYY ... の前に入れた。bootstrap-features.md を使うと feature-id が複数出てくるのでそれを使って、「/speckit.specify --feature-id F-XXX-YYY 仕様説明 」する
   - と思ったけど、このやり方はできないと思ったので specify.md を修正した。結果、従来の Speckit と同様に /speckit.specify "仕様説明"  → (複数の Feature ID と各 spec.md とチェックリスト が生成される) → /speckit.clarify → /speckit.plan で OK
 - いくつかは空の受け皿がある状態になっている
 - スクリプト周り(scripts/)をダウンロードして、このプロジェクト用に調整。特にPATHは変更する必要あるかも。
