--- a/docs/[見ないでください]私の秘密メモ.md
+++ b/docs/[見ないでください]私の秘密メモ.md
@@ -1,7 +1,11 @@
 # ブランチ
 
+- ブランチ：dev-0101
+  - F-API-001-sandbox の内容をコピーして新しいブランチ dev-0101 を作成
+  - これが最新。ここから開発開始する
+↑
 - ブランチ：F-API-001-sandbox
-  - 修正中に勝手に作られちゃった。これが最新。
+  - 修正中に勝手に作られちゃった。
 ↑
 - ブランチ：Skills
   - Spec に Skill 要素を追加
