--- a/docs/[見ないでください]私の秘密メモ.md
+++ b/docs/[見ないでください]私の秘密メモ.md
@@ -1,5 +1,8 @@
 # ブランチ
-
+- ブランチ： F-API-002-minirag-backend と F-API-003-minirag-chat-ui
+  - 002がバックエンド、003がフロントエンドのブランチにした。フロントエンドは一旦、簡易HTMLのチャットUIにしているので後でアバターUIと統合する
+  - メモリーム開発中
+↑
 - ブランチ：dev-0101
   - F-API-001-sandbox の内容をコピーして新しいブランチ dev-0101 を作成
   - これが最新。ここから開発開始する
