--- a/docs/[見ないでください]私の秘密メモ.md
+++ b/docs/[見ないでください]私の秘密メモ.md
@@ -285,7 +285,7 @@ ExecPlan → design/index.md → 各 feature の impl-plan → tasks.md
 
 ## 品質ゲート
 
-- Spec Kit は「specify → clarify → (仕様品質ゲート: scripts/validate_spec.sh) → Plan → (Plan品質ゲート: scripts/validate_plan.sh) → Tasks  → (Task品質ゲート) → Implement → (実装ゲート: コード&セキュリティレビュー)」のゲート制で回すので、1つのプロンプトに詰め込みすぎないこと
+- Spec Kit は「specify → clarify → (仕様品質ゲート: scripts/validate_spec.sh) → Plan → (Plan品質ゲート: scripts/validate_plan.sh) → Tasks  → (Task品質ゲート) → analyze → Implement → (実装ゲート: コード&セキュリティレビュー)」のゲート制で回すので、1つのプロンプトに詰め込みすぎないこと
 - /plan は Plan を作るだけ。タスク分解は /speckit.tasks、実装は /speckit.implement に流すのが基本ラインです。
 - /speckit.plan で生成されるものは以下。以下をPlan品質ゲートでチェックする
   - impl-plan.md
