--- a/docs/[見ないでください]私の秘密メモ.md
+++ b/docs/[見ないでください]私の秘密メモ.md
@@ -2,6 +2,7 @@
 - ブランチ： F-API-002-minirag-backend と F-API-003-minirag-chat-ui
   - 002がバックエンド、003がフロントエンドのブランチにした。フロントエンドは一旦、簡易HTMLのチャットUIにしているので後でアバターUIと統合する
   - メモリーム開発中
+  - JulesはDockerが使えないのでかなり厳しいかも。一旦Codex CLIで実装してもらう。gh コマンドで Issue を取り込んで実装してもらう。
 ↑
 - ブランチ：dev-0101
   - F-API-001-sandbox の内容をコピーして新しいブランチ dev-0101 を作成
