--- a/docs/[見ないでください]私の秘密メモ.md
+++ b/docs/[見ないでください]私の秘密メモ.md
@@ -45,6 +45,33 @@
   - 【done】所定のフォルダに配置されたら、あくまでも汎用的なリストになっているため、エージェントに今回のプロジェクトの仕様にないチェック項目は削除させ、必要なものだけ残させるためのコメントを書く。
   - 【done】マイクロサービスの実装が完了するごとにチェックリストを走らせる。その代わり、全体アーキテクチャに対してのチェックは不要。
 
+# doing
+現在、MiniRAG を FastAPI 化してDockerで起動できたっぽい。
+http://localhost:8165/docs
+Dockerコンテナは以下で起動できる。
+```
+bash -c "cd /mnt/c/Users/kbpsh/OneDrive/development/project/DeepAgentsSpec/services/api-gateway/EPIC-API-002-minirag && docker compose up -d"
+```
+
+MiniRAG API のテストイメージ
+```
+curl -X POST http://localhost:8165/minirag/documents/bulk \             
+-H "Content-Type: application/json" \
+-d '{"documents":[{"workspace":"procurement_docs","doc_id":"proc-plan-
+fy2026-apac","title":"タイトル","summary":"要約","body":"本             
+文","status":"in_progress","region":"APAC","priority":1,"metadata":     
+{"category":"planning_document"}}],"overwrite":true}'
+
+curl -X POST http://localhost:8165/minirag/search \
+-H "Content-Type: application/json" \
+-d '{"query":"調達計画について教えて","modes":                        
+["mini","light"],"top_k":3,"include_provenance":true}'
+```
+
+簡易チャットUIの方はCodex Webで実装して、プルリクまで作成した。マージはまだ。
+
+
+
 
 ## /speckit.specify とは？
 ↓ これを書くのが無理なので、従来の Speckit 通り /speckit.specify "仕様説明" できるように改良した。つまり、specify.md のプロンプトを修正し、feature_list.json を自動で生成するようにさせた。
