--- a/docs/[見ないでください]私の秘密メモ.md
+++ b/docs/[見ないでください]私の秘密メモ.md
@@ -1,5 +1,8 @@
 # ブランチ
 
+- ブランチ：F-API-002-minirag-backend
+  - 完成した。これで MiniRAG はFastAPI化できた。次は F-API-003-minirag-chat-ui と統合する
+↑
 - ブランチ：dev-0101
   - F-API-001-sandbox の内容をコピーして新しいブランチ dev-0101 を作成
   - これが最新。ここから開発開始する
