--- a/docs/[見ないでください]私の秘密メモ.md
+++ b/docs/[見ないでください]私の秘密メモ.md
@@ -1,5 +1,13 @@
 # ブランチ
 
+- ブランチ：F-API-004-minirag-ui-api-integration
+  - F-API-002-minirag-backend と F-API-003-minirag-chat-ui を統合
+  - フロントエンド: http://localhost:9143/
+  - バックエンド: 
+    - cd services/api-gateway/EPIC-API-002-minirag
+    - ./scripts/start.sh cleanup
+    - ./scripts/stop.sh
+↑
 - ブランチ：F-API-002-minirag-backend
   - 完成した。これで MiniRAG はFastAPI化できた。次は F-API-003-minirag-chat-ui と統合する
 ↑
