--- a/docs/[見ないでください]私の秘密メモ.md
+++ b/docs/[見ないでください]私の秘密メモ.md
@@ -2,7 +2,9 @@
 
 - ブランチ：F-API-004-minirag-ui-api-integration
   - F-API-002-minirag-backend と F-API-003-minirag-chat-ui を統合
-  - フロントエンド: http://localhost:9143/
+  - フロントエンド:
+    - ./services/frontend/EPIC-API-001-minirag-demo-ui/scripts/run_dev.sh
+    - http://localhost:9143/
   - バックエンド: 
     - cd services/api-gateway/EPIC-API-002-minirag
     - ./scripts/start.sh cleanup
